[gd_scene load_steps=8 format=4 uid="uid://ddiyyuqnkdsr5"]

[ext_resource type="Script" uid="uid://hddk0213e151" path="res://Levels/Level 2/level_2.gd" id="1_aat58"]
[ext_resource type="Texture2D" uid="uid://yc3cnl0m85ev" path="res://Tiles/LightBrown.jpg" id="2_aat58"]
[ext_resource type="Texture2D" uid="uid://ygbk4kfuuoy4" path="res://Tiles/DarkBrown.jpg" id="3_n5uh2"]
[ext_resource type="Script" uid="uid://dtlfyxn0gwd0h" path="res://Levels/Level 2/logic_panel.gd" id="4_o4rnw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w2prh"]
texture = ExtResource("2_aat58")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yfybp"]
texture = ExtResource("3_n5uh2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_atwlb"]
sources/0 = SubResource("TileSetAtlasSource_w2prh")
sources/1 = SubResource("TileSetAtlasSource_yfybp")

[node name="Level2" type="Node2D"]
script = ExtResource("1_aat58")

[node name="Board" type="TileMap" parent="."]
tile_set = SubResource("TileSet_atwlb")
rendering_quadrant_size = 8
format = 2

[node name="Layer1" type="TileMapLayer" parent="Board"]
use_parent_material = true
position = Vector2(64, 64)
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAIAAAD/////AAAEAAIAAAD8//z/AAAEAAIAAAD9//3/AAAEAAIAAAD+//7/AAAEAAIAAAABAAEAAAAEAAIAAAACAAIAAAAEAAIAAAADAAMAAAAEAAIAAAABAP//AAAEAAIAAAACAP7/AAAEAAIAAAADAP3/AAAEAAIAAAACAPz/AAAEAAIAAAAAAPz/AAAEAAIAAAD+//z/AAAEAAIAAAD8//7/AAAEAAIAAAD8/wAAAAAEAAIAAAD8/wIAAAAEAAIAAAD9/wMAAAAEAAIAAAD//wMAAAAEAAIAAAABAAMAAAAEAAIAAAAAAAIAAAAEAAIAAAD//wEAAAAEAAIAAAD+/wAAAAAEAAIAAAD9////AAAEAAIAAAD9/wEAAAAEAAIAAAD+/wIAAAAEAAIAAAADAP//AAAEAAIAAAACAAAAAAAEAAIAAAAAAP7/AAAEAAIAAAD///3/AAAEAAIAAAABAP3/AAAEAAIAAAACAAMAAQACAAIAAAADAAIAAQACAAIAAAACAAEAAQACAAIAAAABAAAAAQACAAIAAAAAAP//AQACAAIAAAD///7/AQACAAIAAAD+//3/AQACAAIAAAD9//z/AQACAAIAAAD8//3/AQACAAIAAAD9//7/AQACAAIAAAD8////AQACAAIAAAD9/wAAAQACAAIAAAD8/wEAAQACAAIAAAD9/wIAAQACAAIAAAD+/wEAAQACAAIAAAD//wIAAQACAAIAAAD+/wMAAQACAAIAAAAAAAMAAQACAAIAAAABAAIAAQACAAIAAAAAAAEAAQACAAIAAAD//wAAAQACAAIAAAD+////AQACAAIAAAD///z/AQACAAIAAAABAPz/AQACAAIAAAAAAP3/AQACAAIAAAABAP7/AQACAAIAAAACAP3/AQACAAIAAAACAP//AQACAAIAAAADAP7/AQACAAIAAAADAPz/AQACAAIAAAADAAAAAQACAAIAAAD8/wMAAQACAAIAAAADAAEAAAAEAAMAAAA=")
tile_set = SubResource("TileSet_atwlb")

[node name="CamTopCenterBoard" type="Camera2D" parent="."]
position = Vector2(64, 64)
zoom = Vector2(4.5, 4.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="LogicPanel" type="Panel" parent="UI"]
visible = false
self_modulate = Color(0, 0, 0, 1)
light_mask = 1023
visibility_layer = 1023
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -559.0
offset_top = -269.0
offset_right = -459.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00182382
scale = Vector2(2.5, 2.5)
script = ExtResource("4_o4rnw")

[node name="ApplyButton" type="Button" parent="UI/LogicPanel"]
layout_mode = 0
offset_right = 52.0
offset_bottom = 31.0
rotation = 0.0248209
scale = Vector2(0.2, 0.2)
text = "Apply"

[node name="ColorRect" type="ColorRect" parent="UI/LogicPanel"]
layout_mode = 0
offset_left = -5.75
offset_top = -20.008
offset_right = 106.25
offset_bottom = -0.00797844
rotation = -0.00714684
color = Color(0, 0, 0, 0.784314)

[node name="Label" type="Label" parent="UI/LogicPanel"]
layout_mode = 0
offset_left = -5.75
offset_top = -19.991
offset_right = 143.25
offset_bottom = 3.009
rotation = -0.00444009
scale = Vector2(0.75, 0.75)
text = "Movement Options"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/LogicPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 2.0
offset_right = 143.0
offset_bottom = 278.0
scale = Vector2(0.35, 0.35)

[node name="LineEditUp" type="LineEdit" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEditDown" type="LineEdit" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEditLeft" type="LineEdit" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEditRight" type="LineEdit" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEditDownRight" type="LineEdit" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEditDownLeft" type="LineEdit" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEditUpRight" type="LineEdit" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2

[node name="LineEditUpLeft" type="LineEdit" parent="UI/LogicPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_left = 925.0
offset_top = 50.0
offset_right = 1039.0
offset_bottom = 90.0
scale = Vector2(1.5, 1.5)

[node name="Restart" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Home" type="Button" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Home"

[connection signal="pressed" from="UI/LogicPanel/ApplyButton" to="UI/LogicPanel" method="_on_button_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/HBoxContainer/Home" to="." method="_on_home_pressed"]
